<resources>
    <string name="app_name">Mi Bodeguita Vendedor</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="boton_ingresar">Ingresar</string>
    <string name="bodeguero">VENDEDOR</string>
    <string name="entraste">Entraste</string>
    <string name="contrase_a">Contraseña</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="contacto">Contacto</string>
    <string name="title_activity_pantalla_pedidos">Pantalla_pedidos</string>
    <string name="unidades">unid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="llamar_a_cliente">LLamar a cliente</string>
    <string name="preparando_pedido">PREPARANDO PEDIDO</string>
    <string name="Cambiar_estado_pedido">CAMBIAR ESTADO PEDIDO</string>
    <string name="pedido_enviado">PEDIDO ENVIADO</string>
    <string name="recordar_datos">Recordar datos</string>
    <string name="icono_mail">icono mail</string>
    <string name="logo_app">logo app</string>
    <string name="stock">Stock</string>
    <string name="precio">Precio</string>
    <string name="textview">TextView</string>
    <string name="modificar_a">Modificar a:</string>
    <string name="actual">Actual:</string>
    <string name="modifica_algun_producto_de_tu_base_de_datos">Modifica algun producto de tu base de datos:</string>
    <string name="actualizar_campo">Actualizar campo</string>
    <string name="actualizacion_correcta_precio">El precio se actualizó correctamente</string>
    <string name="actualizacion_correcta_stock">El stock se actualizó correctamente</string>
    <string name="actualizacion_incorrecta">El producto no pudo actualizarse, intentalo nuevamente</string>
    <string name="envia_un_comentario_o_sugerencia">Envia un comentario o sugerencia…</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="horario_de_atencion">Horario de atencion:</string>
    <string name="lunes_a_domingo_de_6_00_a_m_a_00_00_horas">Lunes a domingo de 6:00 a.m. a 00:00 horas.</string>
    <string name="no_disponible_mayus">NO DISPONIBLE</string>
    <string name="reponer_stock">Reponer stock</string>
    <string name="no_disponible">No Disponible</string>
    <string name="disponible">Disponible</string>
    <string name="actualizar_producto">Actualizar producto</string>
    <string name="boton_borrar">boton borrar</string>
    <string name="info_frag_stock">Aqui puedes visualizar que productos estan con stock bajo, a medida que vayas reponiendo tu stock anda eliminando los mensajes, gracias.</string>
    <string name="eliminar_todo">Eliminar todo</string>
    <string name="unid">Unid</string>
    <string name="icono_no_disponible">icono_no_disponible</string>
    <string name="total">Total:</string>
    <string name="ganancias_adicionales">Adicionales:</string>
    <string name="comision">Comisión:</string>
    <string name="cambiar_estado">cambiar estado pedido</string>
    <string name="simbolo_soles">S/. </string>
    <string name="total_a_pagar">Total a pagar:</string>
    <string name="comisiones">Comisiones</string>
    <string name="periodo_no_disponible">Periodo no disponible</string>
    <string name="comision_no_disponible">Comisión no disponible</string>
    <string name="informacion_no_disponible">Informacion no disponible</string>
    <string name="debes_a_mi_bodeguita">Debes a Mi Bodeguita</string>
    <string name="puedes_pagar_hasta">Si presentas deuda, puedes pagar hasta el miercoles, de lo contrario tu cuenta será bloqueada.</string>
    <string name="datos_de_deposito">DATOS DE DEPÓSITO</string>
    <string name="cuenta_de_ahorros_bcp">Cuenta de ahorros BCP :</string>
    <string name="nombre">Nombre :</string>
    <string name="celular_y_o_whatsapp">Celular y/o Whatsapp:</string>
    <string name="email">Email:</string>
    <string name="paga_lo_antes_posible">Paga lo antes posible y comunicate con nosotros para activar tu cuenta nuevamente.</string>
    <string name="tu_cuenta_ha_sido_bloqueada">TU CUENTA HA SIDO BLOQUEADA POR FALTA DE PAGO</string>
    <string name="recuperar_contrasena">Recuperar contrasena</string>
    <string name="imagen">imagen</string>
    <string name="youAreNotUpdatedTitle">Actualizacion disponible</string>
    <string name="youAreNotUpdatedMessage">Una nueva versión de Mi Bodeguita está disponible. Por favor, actualice a la ultima versión ahora. </string>
    <string name="update">Actualizar</string>
    <string name="buscar">Buscar</string>
    <string name="separador_de_productos">separador de productos</string>
    <string name="enviar_notificacion">Enviar notificacion</string>
    <string name="cambiar_estado_pedido">CAMBIAR ESTADO</string>
    <string name="orden">Orden:</string>
    <string name="total1">Total</string>
    <string name="subtotal">Subtotal :</string>
    <string name="totalPedidoDetalle">Total :</string>
    <string name="comisionPedidoDetalle">Comisión :</string>
    <string name="pagar_conPedidoDetalle">Pagará con :</string>
    <string name="vueltoPedidoDetalle">Vuelto :</string>
    <string name="sin_mensajes_de_chat">Sin mensajes de chat</string>
    <string name="escribe_mensaje">Escribe mensaje</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>

</resources>
