<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="hu.pe.thinkanddo.activityconmenu.MainActivity">
    <item
        android:id="@+id/no_disponible"
        android:title="@string/no_disponible"
        app:showAsAction="never" />
    <item
        android:id="@+id/disponible"
        android:title="@string/disponible"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/actualizar_prod"
        android:title="@string/actualizar_producto"
        app:showAsAction="never" />
    <item
        android:id="@+id/comision"
        android:title="@string/comisiones"
        app:showAsAction="never" />
    <item
        android:id="@+id/ic_group"
        android:icon="@drawable/actionbar_group_icon"
        android:title="@string/reponer_stock"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/contacto"
        android:title="@string/contacto"
        app:showAsAction="never" />
    <item
        android:id="@+id/cerrar_sesion"
        android:title="@string/cerrar_sesion"
        app:showAsAction="never"/>

</menu>
