<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="100dp"
    android:layout_width="match_parent"
    android:layout_marginTop="50dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etEscribirMensajePedidoDetalle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/escribe_mensaje"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:ignore="Autofill"
                android:background="@drawable/back_edittext_enviar_mensaje"
                android:textCursorDrawable="@null"
                android:padding="8dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnEnviarMensajeEnPedidoDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/enviar"
                    android:textColor="@android:color/white"
                    android:background="@drawable/back_btn_enviar_mensaje"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/btnCancelarMensajeEnPedidoDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/cancelar"
                    android:textColor="@color/colorPrimaryDark"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>



