<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/contenedor_login"
    tools:context="hu.pe.thinkanddo.vendedorbodegavirtualv3.actividades.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/logo_app"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/bodeguero"
        android:textAlignment="center"
        android:textColor="#323532"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_edittext_usu_pas"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_usuario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:alpha="0.87"
                android:background="@drawable/back_edittext_usu_pas"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="20dp"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textAlignment="textStart" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_edittext_usu_pas"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/texto_secundario">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_clave"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:alpha="0.87"
                android:background="@drawable/back_edittext_usu_pas"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="20dp"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textAlignment="textStart" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/boton_pulsado"
        android:text="@string/boton_ingresar"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_olvide_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_olvide_clave"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_olv_clave"
        android:backgroundTint="@color/colorRojo"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
