    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:context="hu.pe.thinkanddo.vendedorbodegavirtualv3.fragments.ContactoFrag">

        <TextView
            android:id="@+id/tv_contacto_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_celular"
            app:layout_constraintStart_toEndOf="@+id/iv_celular"
            app:layout_constraintTop_toBottomOf="@+id/tv_contacto_fijo"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tv_contacto_fijo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toEndOf="@+id/iv_fijo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tv_contacto_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_mail"
            app:layout_constraintStart_toEndOf="@+id/iv_mail"
            app:layout_constraintTop_toBottomOf="@+id/tv_contacto_telefono"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/iv_celular"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_fijo"
            app:srcCompat="@drawable/ic_call_black_24dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/icono_mail"
            android:layout_marginLeft="32dp" />

        <ImageView
            android:id="@+id/iv_fijo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_call_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/icono_mail"
            android:layout_marginLeft="32dp" />

        <ImageView
            android:id="@+id/iv_mail"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icono_mail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_celular"
            app:srcCompat="@drawable/ic_email_black_24dp"
            android:layout_marginLeft="32dp" />

        <EditText
            android:id="@+id/et_envia_comen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/envia_un_comentario_o_sugerencia"
            android:inputType="text"
            android:singleLine="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_direccion" />

        <Button
            android:id="@+id/btn_envia_comen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/boton_pulsado"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/enviar_comentario"
            app:layout_constraintEnd_toEndOf="@+id/et_envia_comen"
            app:layout_constraintStart_toStartOf="@+id/et_envia_comen"
            app:layout_constraintTop_toBottomOf="@+id/et_envia_comen" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/horario_de_atencion"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginBottom="60dp"
            android:text="@string/lunes_a_domingo_de_6_00_a_m_a_00_00_horas"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/imagen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_mail"
            app:srcCompat="@drawable/ic_location_on_black_24dp"
            android:layout_marginLeft="32dp" />

        <TextView
            android:id="@+id/tv_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_contacto_email"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_envia_comen" />

    </android.support.constraint.ConstraintLayout>

